# lib_layered_config

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  codecov.yml  concept.md  pyproject.toml
.github/workflows/: ci.yml
docs/pr/: 1-pr.md  2-pr-steps.md  3-pr-project-board.md
docs/systemdesign/: module_reference.md  test_matrix.md
notebooks/: Quickstart.ipynb  Quickstart.ipynb.backup
packaging/: README.md
packaging/brew/Formula/: lib-layered-config.rb
packaging/conda/recipe/: meta.yaml
packaging/nix/: flake.nix
scripts/: _utils.py  build.py  bump_version.py  generate_nix_flake.py  menu.py  release.py  run_cli.py  test.py
src/lib_layered_config/: __init__.py  __init__conf__.py  __main__.py  cli.py  core.py  lib_layered_config.py  observability.py  testing.py
src/lib_layered_config/adapters/dotenv/: default.py
src/lib_layered_config/adapters/env/: __init__.py  default.py
src/lib_layered_config/adapters/file_loaders/: structured.py
src/lib_layered_config/adapters/path_resolvers/: default.py
src/lib_layered_config/application/: merge.py  ports.py
src/lib_layered_config/domain/: config.py  errors.py
src/lib_layered_config/examples/: __init__.py  deploy.py  generate.py
tests/: test_basic.py  test_scripts.py
tests/adapters/: test_dotenv_loader.py  test_env_loader.py  test_file_loaders.py  test_path_resolver.py  test_port_contracts.py
tests/application/: test_merge.py
tests/e2e/: test_cli.py  test_notebooks.py  test_read_config.py
tests/examples/: test_deploy.py
tests/unit/: test_config.py  test_errors.py  test_examples.py  test_observability.py  test_testing.py
