[project]
name = "lib_layered_config"
version = "0.0.1"
description = "Template for python apps with registered cli commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.7", "click>=8.1", "lib_cli_exit_tools>=1.1.1"]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["logging", "rich", "cli", "terminal", "ansi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/lib_layered_config"
Repository = "https://github.com/bitranox/lib_layered_config.git"
Issues = "https://github.com/bitranox/lib_layered_config/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.1",
  "pyright>=1.1.405",
  "build>=1.3.0",
  "twine>=6.2.0",
  "codecov>=2.1.13",
  "textual>=6.1.0",
]

[project.scripts]
lib_layered_config = "lib_layered_config.cli:main"
lib-layered-config = "lib_layered_config.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/lib_layered_config"]
include = ["src/lib_layered_config/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "scripts/menu.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_layered_config"]

[tool.coverage.report]
omit = [
  "tests/*",
  "packaging/*",
  "src/lib_layered_config/__init__conf__.py",
]
fail_under = 80
show_missing = true
